--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My personal website",
   "repository": "https://github.com/ryjo1026/ryjo1026.github.io.git",
   "author": "Ryan Johnston <ryjo1026@gmail.com>",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "dependencies": {
     "bootstrap": "^4.1.2"
   },
