--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "npm-run-all": "^4.1.5"
   },
   "scripts": {
-    "build": "node-sass --omit-source-map-url scss --output css",
+    "build": "node-sass --omit-source-map-url assets/scss --output assets/css",
     "watch": "run-p watch:*",
     "watch:css": "$npm_execpath run build --watch",
     "watch:browser-sync": "browser-sync start --server --files *",
