--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,5 +25,10 @@
         "@typescript-eslint"
     ],
     "rules": {
+         "no-use-before-define": "off",
+         "@typescript-eslint/no-use-before-define": ["error"],
+        "react/jsx-filename-extension": [1, {
+            "extensions": [".jsx", ".tsx"]
+        }]
     }
 }
