--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@types/react-helmet": "^6.1.0",
+    "@types/styled-components": "^5.1.3",
     "babel-plugin-styled-components": "^1.11.1",
     "bulma": "^0.9.0",
     "gatsby": "^2.24.63",
@@ -41,7 +42,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "typescript": "^4.0.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.2.0",
