--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.3",
     "babel-plugin-styled-components": "^1.11.1",
