--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@reach/router": "^1.3.4",
     "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.3",
@@ -56,6 +60,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "gatsby-plugin-codegen": "^1.2.14",
     "prettier": "2.1.1"
   },
   "repository": {
