--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gatsby-transformer-remark": "^2.8.35",
     "gatsby-transformer-sharp": "^2.5.15",
     "node-sass": "^4.14.1",
+    "object-fit-images": "^3.2.4",
     "prismjs": "^1.21.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
